<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Movie Collection</string>
    <string name="no_movies">No Movies</string>
    <string name="menuitem_add">Add</string>
    <string name="menuitem_edit">Edit</string>
    <string name="menuitem_delete">Delete</string>
    <string name="button_save_movie">Save Movie</string>
    <string name="hint_title">Title (Required)</string>
    <string name="hint_year">Year</string>
    <string name="hint_director">Director</string>
    <string name="hint_type">Type</string>
    <string name="hint_country">Country</string>
    <string name="hint_length">Length</string>
    <string name="hint_leading">Leading Roles</string>
    <string name="label_Title">Title:</string>
    <string name="label_year">Year:</string>
    <string name="label_dirctor">Dirctor:</string>
    <string name="label_type">Type:</string>
    <string name="label_country">Country:</string>
    <string name="label_length">Length:</string>
    <string name="label_leading">Leanding Roles:</string>
    <string name="confirm_title">Are You Sure?</string>
    <string name="confirm_message">This will permanently delete the movie</string>
    <string name="ok">OK</string>
    <string name="error_message">You must enter a movie title</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_delete">Delete</string>

</resources>