<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/addEditScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="1"
        android:orientation="vertical"
        android:useDefaultMargins="true" >

        <EditText
            android:id="@+id/titleEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_title"
            android:imeOptions="actionNext"
            android:inputType="textPersonName|textCapWords" >
        </EditText>

        <EditText
            android:id="@+id/yearEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_year"
            android:imeOptions="actionNext"
            android:inputType="number" >
        </EditText>

        <EditText
            android:id="@+id/directorEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_dirctor"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress|textPersonName" >
        </EditText>

        <EditText
            android:id="@+id/typeEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_type"
            android:imeOptions="actionNext"
            android:inputType="text" >
        </EditText>

        <EditText
            android:id="@+id/countryEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_country"
            android:imeOptions="actionNext"
            android:inputType="text" >
        </EditText>

        <EditText
            android:id="@+id/lengthEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_length"
            android:imeOptions="actionNext"
            android:inputType="number" >
        </EditText>

        <EditText
            android:id="@+id/leadingEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_leading"
            android:imeOptions="actionDone"
            android:inputType="textPersonName" >
        </EditText>

        <Button
            android:id="@+id/saveMovieButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/button_save_movie" >
        </Button>
    </GridLayout>

</ScrollView>